Fri Apr 28 13:55:01 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Gestalt.h:

          Fixed the usage of ACE_UNIMPLEMENTED_FUNC to remove the trailing
          semicolon. It was causing build errors on compilers that define
          the macro as empty.

Fri Apr 28 13:29:08 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/tao_orb_tests.lst:

          Updated the conditions for running the ORB-specific service
          repository tests.

Fri Apr 28 13:23:57 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:

          Updated the declaration of current_ to match the definition in
          its use of ACE_TSS_TYPE macro, as they are not equivalent for
          a single-threaded builds.

Fri Apr 28 13:21:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Process_Mutex_Test.cpp:
          When spawn failes log an error and exit instead of using an assert
          which causes an abort of the exe

Fri Apr 28 13:15:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Pipe_Test.cpp:
          When spawn failes log an error and exit instead of using an assert
          which causes an abort of the exe

Fri Apr 28 12:49:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-openvms.h:
          Added __SIGNED_INT_TIME_T so that we get a signed time_t that
          matches the POSIX spec that ACE expects.

Fri Apr 28 12:23:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-openvms.h:
          Removed comments, macros are documented in generally, added
          ACE_LACKS_PERFECT_MULTICAST_FILTERING

Fri Apr 28 11:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/Process_VMS.pm:
          New file to be able to run the tests automatically on OpenVMS

        * bin/PerlACE/Process.pm:
          When running on OpenVMS use Process_VMS

        * ace/config-openvms.h: